# AutoFeishu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  unittest.yml  workflow.yaml
feishu/: __init__.py  approval.py  client.py  messages.py  spread_sheet.py
feishu/api/: contact.py  group.py  messages.py  spread_sheet.py
tests/: test_approval.py
