[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "template"
version = "0.0.1"
dependencies = []
[[project.authors]]
name = "Dragon-GCS"
email = "878173121@qq.com"

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []


[tool.ruff]
line-length = 100
